--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,25 @@
-﻿cmake_minimum_required (VERSION 3.8)
+﻿# CMakeList.txt : Top-level CMake project file, do global configuration
+# and include sub-projects here.
+#
+cmake_minimum_required (VERSION 3.12)
 
-set(CMAKE_CXX_STANDARD 17)
-add_compile_definitions(UNICODE)
-add_compile_definitions(_UNICODE)
+# Enable Hot Reload for MSVC compilers if supported.
+if (POLICY CMP0141)
+  cmake_policy(SET CMP0141 NEW)
+  set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
+endif()
 
-project ("equals")
+project ("equivalence")
 
-add_executable (equals WIN32 "main.cpp" "crc32.cpp" "crc32.h"  "tcp.h")
+set (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+
+add_subdirectory (src)
+
+option(SDL_SHARED "" OFF)
+option(SDL_STATIC "" ON)
+add_subdirectory(external/SDL)
+
+
+set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build SDL2_* as a static library" FORCE)
+add_subdirectory(external/SDL_ttf)
+add_subdirectory(external/SDL_net)
